syntax = "proto3";

message Fixed64 {
  repeated fixed64 fixed64_field1 = 1 [packed=true];
}
