syntax = "proto3";

message SFixed32 {
  repeated sfixed32 sfixed32_field1 = 1;
}
