syntax = "proto3";

message SInt64 {
  repeated sint64 sint64_field1 = 1;
}
