syntax = "proto3";

message UInt32 {
  repeated uint32 uint32_field1 = 1;
}
